--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,21 +1,15 @@
 <div class="content-scroll">
   <div class="scrollable">
-    <h1>Willkommen in unserer Kanzlei</h1>
-    <p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.</p>
-    <p>Nutzen Sie unsere Homepage, um sich einen Überblick über unser Team und unsere individuellen Leistungen
-      für Sie zu verschaffen. Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
-      wir uns selbstverständlich.</p>
-    <br/>
-    <h1>Steuerbüro Grieser</h1>
-    <p>Bahnhof 11</p>
-    <p>88299 Leutkirch</p>
-    <p>Telefon: 07561/912234</p>
-    <p>Telefax: 07561/912235</p>
-    <p>info@steuerberater-grieser.de</p>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+	  <h1>Willkommen in unserer Kanzlei</h1>
+	  <p>Wir sind eine Steuerberatungskanzlei mit Sitz im schönen Leutkirch im Allgäu.<br>Nutzen Sie unsere Homepage,
+		  um sich einen Überblick über unser Team und unsere individuellen Leistungen
+		  für Sie zu verschaffen. Über Ihren ersten Besuch und ein persönliches Kennenlernen (bei einem Kaffee) freuen
+		  wir uns selbstverständlich.</p>
+	  <br/>
+	  <h1>Steuerbüro Grieser</h1>
+	  <p>Bahnhof 11<br>88299 Leutkirch<br>Telefon: 07561/912234<br>Telefax: 07561/912235<br>info@steuerberater-grieser.de</p>
+	  <br/>
+	  <br/>
   </div>
 </div>
 
