--- a/app/templates/kontakt.hbs
+++ b/app/templates/kontakt.hbs
@@ -1,14 +1,9 @@
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Kontaktinformationen</h1>
-		<p><b>Steuerberater Josef Grieser</b></p>
-		<p>Bahnhof 11</p>
-		<p>88299 Leutkirch</p>
-		<p>Telefon: 07561/912234</p>
-		<p>Telefax: 07561/912235</p>
-		<p>info@steuerberater-grieser.de</p>
+		<p><b>Steuerberater Josef Grieser</b><br>Bahnhof 11<br>88299 Leutkirch<br>Telefon: 07561/912234<br>Telefax: 07561/912235<br>info@steuerberater-grieser.de</p>
 		<br/>
-		<p><b>Unsere Öffnungszeiten</b></p>
+		<p style="margin: 0;"><b>Unsere Öffnungszeiten</b></p>
 		<table class="contact">
 			<tr>
 				<td><p>Mo:</p></td>
