--- a/app/templates/ueberuns.hbs
+++ b/app/templates/ueberuns.hbs
@@ -4,202 +4,117 @@
 
     <p>Unsere Mitarbeiter sind in Ihr Konzept eingebunden, kennen Ihre Ziele und begleiten Sie stetig und engagiert.
       In regelmäßigen Gesprächen überprüfen wir die Strategie und korrigieren, wenn nötig, den Weg.</p>
-
     <br/>
     <table>
       <tr>
         <td>
-          <p><b>Josef Grieser</b></p>
-          <p>Dipl. Betriebswirt (FH); Steuerberater</p>
-          <p>07561/ 9122 34</p>
-          <p>Grieser.J@Steuerberater-Grieser.de</p>
+          <p><b>Josef Grieser</b><br>Dipl. Betriebswirt (FH); Steuerberater<br>07561/ 9122 34<br>Grieser.J@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Anita Katschke</b></p>
-          <p>Dipl. Betriebswirtin (FH); Steuerberaterin</p>
-          <p>07561/ 84899 13</p>
-          <p>A.Katschke@Steuerberater-Grieser.de</p>
+          <p><b>Anita Katschke</b><br>Dipl. Betriebswirtin (FH); Steuerberaterin<br>07561/ 84899 13<br>A.Katschke@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Kurt Wolff</b></p>
-          <p>Steuerberater</p>
-          <p>07561/ 9122 34</p>
-          <p>K.Wolff@Steuerberater-Grieser.de</p>
+          <p><b>Kurt Wolff</b><br>Steuerberater<br>07561/ 9122 34<br>K.Wolff@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Beate Geitzhaus</b></p>
-          <p>Dipl. Kaufmann Univ.; Steuerberaterin</p>
-          <p>07561/ 84899 26</p>
-          <p>B.Geitzhaus@Steuerberater-Grieser.de</p>
+          <p><b>Beate Geitzhaus</b><br>Dipl. Kaufmann Univ.; Steuerberaterin<br>07561/ 84899 26<br>B.Geitzhaus@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Josef Schupp</b></p>
-          <p>Bilanzbuchhalter</p>
-          <p>07561/ 84899 12</p>
-          <p>J.Schupp@Steuerberater-Grieser.de</p>
+          <p><b>Josef Schupp</b><br>Bilanzbuchhalter<br>07561/ 84899 12<br>J.Schupp@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Gerhard Minarik</b></p>
-          <p>Steuerfachangestellter</p>
-          <p>07561/ 84899 21</p>
-          <p>G.Minarik@Steuerberater-Grieser.de</p>
+          <p><b>Gerhard Minarik</b><br>Steuerfachangestellter<br>07561/ 84899 21<br>G.Minarik@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Peter Straub</b></p>
-          <p>Steuerfachangestellter</p>
-          <p>07561/ 84899 45</p>
-          <p>P.Straub@Steuerberater-Grieser.de</p>
+          <p><b>Peter Straub</b><br>Steuerfachangestellter<br>07561/ 84899 45<br>P.Straub@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Tanja Gredler</b></p>
-          <p>Steuerfachangestellte; Wirtschaftsfachwirtin</p>
-          <p>07561/ 84899 19</p>
-          <p>T.Gredler@Steuerberater-Grieser.de</p>
+          <p><b>Tanja Gredler</b><br>Steuerfachangestellte; Wirtschaftsfachwirtin<br>07561/ 84899 19<br>T.Gredler@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Iris Müller</b></p>
-          <p>Steuerfachwirtin</p>
-          <p>07561/ 84899 35</p>
-          <p>I.Mueller@Steuerberater-Grieser.de</p>
+          <p><b>Iris Müller</b><br>Steuerfachwirtin<br>07561/ 84899 35<br>I.Mueller@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Gabriele Hilsenbeck</b></p>
-          <p>Steuerfachwirtin</p>
-          <p>07561/ 84899 18</p>
-          <p>G.Hilsenbeck@Steuerberater-Grieser.de</p>
+          <p><b>Gabriele Hilsenbeck</b><br>Steuerfachwirtin<br>07561/ 84899 18<br>G.Hilsenbeck@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Elena Gann</b></p>
-          <p>Finanzbuchhalterin</p>
-          <p>07561/ 84899 25</p>
-          <p>E.Gann@Steuerberater-Grieser.de</p>
+          <p><b>Elena Gann</b><br>Finanzbuchhalterin<br>07561/ 84899 25<br>E.Gann@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Tania Evers</b></p>
-          <p>Steuerfachangestellte</p>
-          <p>07561/ 84899 29</p>
-          <p>T.Evers@Steuerberater-Grieser.de</p>
+          <p><b>Tania Evers</b><br>Steuerfachangestellte<br>07561/ 84899 29<br>T.Evers@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Sonja Sonntag</b></p>
-          <p>Finanzbuchhalterin</p>
-          <p>07561/ 84899 33</p>
-          <p>S.Sonntag@Steuerberater-Grieser.de</p>
+          <p><b>Sonja Sonntag</b><br>Finanzbuchhalterin<br>07561/ 84899 33<br>S.Sonntag@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Karin Kibele</b></p>
-          <p>Betriebswirt VWA</p>
-          <p>07561/ 9122 34</p>
-          <p>K.Kibele@Steuerberater-Grieser.de</p>
+          <p><b>Karin Kibele</b><br>Betriebswirt VWA<br>07561/ 9122 34<br>K.Kibele@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Beate Biesinger</b></p>
-          <p>Volkswirtin</p>
-          <p>07561/ 84899 34</p>
-          <p>B.Biesinger@Steuerberater-Grieser.de</p>
+          <p><b>Beate Biesinger</b><br>Volkswirtin<br>07561/ 84899 34<br>B.Biesinger@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Anne Fakler</b></p>
-          <p>Steuerfachangestellte</p>
-          <p>07561/ 84899 22</p>
-          <p>A.Fakler@Steuerberater-Grieser.de</p>
+          <p><b>Anne Fakler</b><br>Steuerfachangestellte<br>07561/ 84899 22<br>A.Fakler@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Christa Gundy</b></p>
-          <p>Buchhalterin</p>
-          <p>07561/ 84899 36</p>
-          <p>C.Gundy@Steuerberater-Grieser.de</p>
+          <p><b>Christa Gundy</b><br>Buchhalterin<br>07561/ 84899 36<br>C.Gundy@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Manuel Männig</b></p>
-          <p>Steuerfachangestellter</p>
-          <p>07561/ 84899 17</p>
-          <p>M.Maennig@Steuerberater-Grieser.de</p>
+          <p><b>Manuel Männig</b><br>Steuerfachangestellter<br>07561/ 84899 17<br>M.Maennig@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Stefanie Thomann-Harr</b></p>
-          <p>Dipl. Finanzwirtin (FH)</p>
-          <p>07561/ 84899 16</p>
-          <p>S.Thomann@Steuerberater-Grieser.de</p>
+          <p><b>Stefanie Thomann-Harr</b><br>Dipl. Finanzwirtin (FH)<br>07561/ 84899 16<br>S.Thomann@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Agatha Prinz</b></p>
-          <p>Finanzbuchhalterin</p>
-          <p>07561/ 84899 23</p>
-          <p>A.Prinz@Steuerberater-Grieser.de</p>
+          <p><b>Agatha Prinz</b><br>Finanzbuchhalterin<br>07561/ 84899 23<br>A.Prinz@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Evelyn Wocher</b></p>
-          <p>Steuerfachangestellte</p>
-          <p>07561/ 9122 34</p>
-          <p>E.Wocher@Steuerberater-Grieser.de</p>
+          <p><b>Evelyn Wocher</b><br>Steuerfachangestellte<br>07561/ 9122 34<br>E.Wocher@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Josef Staudt</b></p>
-          <p>Dipl. Betriebswirt (FH)</p>
-          <p>07561/ 84899 24</p>
-          <p>J.Staudt@Steuerberater-Grieser.de</p>
+          <p><b>Josef Staudt</b><br>Dipl. Betriebswirt (FH)<br>07561/ 84899 24<br>J.Staudt@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
-        <td><p><b>Laura Buffler</b></p>
-          <p>Auszubildende Steuerfachangestellte</p>
-          <p>07561/ 84899 22</p>
-          <p>L.Buffler@Steuerberater-Grieser.de</p>
+        <td><p><b>Laura Buffler</b><br>Auszubildende Steuerfachangestellte<br>07561/ 84899 22<br>L.Buffler@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Raphael Sperling</b></p>
-          <p>Bachelor of Arts/Steuer- und Prüfungswesen</p>
-          <p>07561/ 84899 38</p>
-          <p>R.Sperling@Steuerberater-Grieser.de</p>
+          <p><b>Raphael Sperling</b><br>Bachelor of Arts/Steuer- und Prüfungswesen<br>07561/ 84899 38<br>R.Sperling@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Hannelore Burger</b></p>
-          <p>Sekretariat</p>
-          <p>07561/ 9122 34</p>
-          <p>H.Burger@Steuerberater-Grieser.de</p>
+          <p><b>Hannelore Burger</b><br>Sekretariat<br>07561/ 9122 34<br>H.Burger@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Cornelia Müller</b></p>
-          <p>Steuerfachangestellte</p>
-          <p>07561/ 84899 20</p>
-          <p>C.Mueller@Steuerberater-Grieser.de</p>
+          <p><b>Cornelia Müller</b><br>Steuerfachangestellte<br>07561/ 84899 20<br>C.Mueller@Steuerberater-Grieser.de</p>
         </td>
       </tr>
       <tr>
         <td>
-          <p><b>Sabine Schüller</b></p>
-          <p>Steuerfachangestellte</p>
-          <p>07561/ 84899 39</p>
-          <p>S.Schueller@Steuerberater-Grieser.de</p>
+          <p><b>Sabine Schüller</b><br>Steuerfachangestellte<br>07561/ 84899 39<br>S.Schueller@Steuerberater-Grieser.de</p>
         </td>
         <td>
-          <p><b>Cornelia Reutlinger</b></p>
-          <p>Steuerfachangestellte</p>
-          <p>07561/ 84899 44</p>
-          <p>C.Reutlinger@Steuerberater-Grieser.de</p>
+          <p><b>Cornelia Reutlinger</b><br>Steuerfachangestellte<br>07561/ 84899 44<br>C.Reutlinger@Steuerberater-Grieser.de</p>
         </td>
       </tr>
     </table>
