--- a/app/templates/mandanten.hbs
+++ b/app/templates/mandanten.hbs
@@ -1,63 +1,19 @@
 <div class="content-scroll">
 	<div class="scrollable">
 		<h1>Mandantenbereich</h1>
-		<p>Wir veröffentlichen hier unsere monatliche Übersicht für unsere Mandanten.</p>
-		<br/>
-    <a href='../assets/blitzlicht/201801 - Blitzlicht.pdf' download>
-			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-			<p style="margin-left: 130px;">Ausgabe: Januar 2018</p>
-		</a>
-		<br/>
-    <a href='../assets/blitzlicht/201802 - Blitzlicht.pdf' download>
-			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-			<p style="margin-left: 130px;">Ausgabe: Februar 2018</p>
-		</a>
-		<br/>
-    <a href='../assets/blitzlicht/201803 - Blitzlicht.pdf' download>
-			<img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-			<p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-			<p style="margin-left: 130px;">Ausgabe: März 2018</p>
-		</a>
-		<br/>
-    <a href='../assets/blitzlicht/201804 - Blitzlicht.pdf' download>
-      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-      <p style="margin-left: 130px;">Ausgabe: April 2018</p>
-    </a>
-    <br/>
-    <a href='../assets/blitzlicht/201805 - Blitzlicht.pdf' download>
-      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-      <p style="margin-left: 130px;">Ausgabe: Mai 2018</p>
-    </a>
-    <br/>
-    <a href='../assets/blitzlicht/201806 - Blitzlicht.pdf' download>
-      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-      <p style="margin-left: 130px;">Ausgabe: Juni 2018</p>
-    </a>
-    <br/>
-    <a href='../assets/blitzlicht/201807 - Blitzlicht.pdf' download>
-      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-      <p style="margin-left: 130px;">Ausgabe: Juli 2018</p>
-    </a>
-    <br/>
-    <a href='../assets/blitzlicht/201808 - Blitzlicht.pdf' download>
-      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-      <p style="margin-left: 130px;">Ausgabe: August 2018</p>
-    </a>
-    <br/>
-    <a href='../assets/blitzlicht/201809 - Blitzlicht.pdf' download>
-      <img style="float: left; padding-left: 4%;" src="assets/images/blitzlicht.png" width="120"/>
-      <p style="margin-left: 130px; margin-top: 8px;">Blitzlicht Report</p>
-      <p style="margin-left: 130px;">Ausgabe: September 2018</p>
-    </a>
-    <br/>
-    <br/>
+		<p style="margin-bottom: 20px;">Wir veröffentlichen hier unsere monatliche Übersicht für unsere Mandanten:</p>
+
+		{{!mandanten-report month='Oktober' year='2018' link='../assets/blitzlicht/201810 - Blitzlicht.pdf' }}
+		{{mandanten-report month='September' year='2018' link='../assets/blitzlicht/201809 - Blitzlicht.pdf' }}
+		{{mandanten-report month='August' year='2018' link='../assets/blitzlicht/201808 - Blitzlicht.pdf' }}
+		{{mandanten-report month='Juli' year='2018' link='../assets/blitzlicht/201807 - Blitzlicht.pdf' }}
+		{{mandanten-report month='Juni' year='2018' link='../assets/blitzlicht/201806 - Blitzlicht.pdf' }}
+		{{mandanten-report month='Mai' year='2018' link='../assets/blitzlicht/201805 - Blitzlicht.pdf' }}
+		{{mandanten-report month='April' year='2018' link='../assets/blitzlicht/201804 - Blitzlicht.pdf' }}
+		{{mandanten-report month='März' year='2018' link='../assets/blitzlicht/201803 - Blitzlicht.pdf' }}
+		{{mandanten-report month='Februar' year='2018' link='../assets/blitzlicht/201802 - Blitzlicht.pdf' }}
+		{{mandanten-report month='Januar' year='2018' link='../assets/blitzlicht/201801 - Blitzlicht.pdf' }}
+
 		<br/>
 		<br/>
 	</div>
