--- a/app/templates/privat.hbs
+++ b/app/templates/privat.hbs
@@ -2,7 +2,7 @@
 	<div class="scrollable">
 		<h1>Privatpersonen</h1>
 		<p>Für Sie als Privatperson bieten wir unter anderem folgende Leistungen an.</p>
-		<ul>
+		<ul style="float: left;">
 			<li>Einkommensteuererklärung</li>
 			<li>Erbschaft- und Schenkungsteuererklärung</li>
 			<li>Gestaltende Steuerberatung</li>
